# PCS_26

./: es01.txt
esercitazione 1/: CMakeLists.txt  es1  intarg.cpp  prog  temperature.cpp
esercitazione2/: CMakeLists.txt  es2  posizioneoggetti.cpp  primialgoritmi.cpp  prog
esercitazione3/: CMakeLists.txt  es3.hpp  main.cpp  ratio
esercitazione4/: CMakeLists.txt  main.cpp  sort.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  main.cpp  osservazioni.txt  prog  sort.hpp  test_mergesort.cpp  test_quickibrido.cpp  test_quicksort.cpp
esercitazione6/: CMakeLists.txt  grafi.hpp  main.cpp  prog
esercitazione7/: CMakeLists.txt  Dijkstra.hpp  grafi.hpp  graph_visit.hpp  main.cpp  prog  recursive_dfs.hpp
esercitazione8/: CMakeLists.txt  gradiente_coniugato.hpp  main.cpp
progetto/: CMakeLists.txt  DePina.hpp  cicli_fondamentali.hpp  cicli_fondamentali_1.hpp  circuiti.cpp  contenitori.hpp  depinanuovo.hpp  gradiente_coniugato.hpp  graph_visit.hpp  graphs.hpp  main_cicli.cpp  maincicli  maindepina  mainperdepina.cpp  metodi_correnti.hpp  netlist.txt  prog
